Changed s few things

--- a/favourites.html
+++ b/favourites.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./Pages/Favourites/script.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>RentEase: Easy rent for you!</title>
   </head>
@@ -30,7 +30,7 @@
       </div>
     </section>
     <div class="page-title">
-      <h2>All flats</h2>
+      <h2>Favourites</h2>
     </div>
     <hr style="max-width: 940px;">
     <section class="flats">
