Added device responsiveness to login and register pages

--- a/register.html
+++ b/register.html
@@ -46,7 +46,7 @@
           <div class="input-div email">
             <label class="label">Email</label>
             <input
-              type="email"
+              type="text"
               class="input"
               placeholder="Enter your email"
               id="email"
