Added New Flat page

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <body>
     <section class="search">
       <div class="search-div">
-        <form class="search-form">
+        <form class="search-form" id="searchForm">
           <div class="search-box-within">
             <div class="search-box">
               <div class="city-area-size">
-                <input type="text" placeholder="City" />
-                <input type="text" placeholder="Area size (m²)" />
+                <input type="text" id="city" name="city" placeholder="City" />
+                <input type="text" id="area" name="area" placeholder="Area size (m²)" />
               </div>
               <div class="price-range">
-                <input type="text" placeholder="Minimum price" />
-                <input type="text" placeholder="Maximum price" />
+                <input type="text" id="minPrice" name="minPrice" placeholder="Minimum price" />
+                <input type="text" id="maxPrice" name="maxPrice" placeholder="Maximum price" />
               </div>
             </div>
             <div class="search-button">
