--- a/register.html
+++ b/register.html
@@ -42,6 +42,17 @@
                 name="userLastName"
               />
             </div>
+            <div class="input-div birthDate">
+              <label class="label">Date of birth</label>
+              <input
+                type="date"
+                class="input"
+                placeholder="Enter your date of birth"
+                id="birthdate"
+                name="birthdate"
+                value=""
+              />
+            </div>
           </div>
           <div class="input-div email">
             <label class="label">Email</label>
