Added settings page

--- a/favourites.html
+++ b/favourites.html
@@ -5,29 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./Pages/Favourites/script.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>RentEase: Easy rent for you!</title>
+    <title>RentEase: Favourites</title>
   </head>
   <body>
     <section class="search">
-      <div class="search-div">
-        <form class="search-form">
-          <div class="search-box-within">
-            <div class="search-box">
-              <div class="city-area-size">
-                <input type="text" placeholder="City" />
-                <input type="text" placeholder="Area size (m²)" />
-              </div>
-              <div class="price-range">
-                <input type="text" placeholder="Minimum price" />
-                <input type="text" placeholder="Maximum price" />
-              </div>
-            </div>
-            <div class="search-button">
-              <input type="submit" value="Filter"/>
-            </div>
+      <form class="search-form" id="searchForm">
+        <div class="search-box">
+          <div class="city-area-size">
+            <input type="text" id="city" name="city" placeholder="City" />
+            <input
+              type="text"
+              id="area"
+              name="area"
+              placeholder="Area size (m²)"
+            />
           </div>
-        </form>
-      </div>
+          <div class="price-range">
+            <input
+              type="text"
+              id="minPrice"
+              name="minPrice"
+              placeholder="Minimum price"
+            />
+            <input
+              type="text"
+              id="maxPrice"
+              name="maxPrice"
+              placeholder="Maximum price"
+            />
+          </div>
+        </div>
+        <div class="search-button">
+          <input type="submit" value="Filter" />
+        </div>
+      </form>
     </section>
     <div class="page-title">
       <h2>Favourites</h2>
