--- a/settings.html
+++ b/settings.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./Pages/Register/registerStyle.css" />
     <!-- Needed libraries -->
-    <script type="module" src="./Pages/Register/script.js"></script>
+    <script type="module" src="./Pages/Settings/script.js"></script>
     <title>RentEase: Register</title>
   </head>
   <body class="container">
@@ -19,7 +19,7 @@
 
       <!-- Right Login Form Section -->
       <div class="form-section">
-        <h2 class="title">Register</h2>
+        <h2 class="title">Update info</h2>
         <form class="form" id="register-form">
           <div class="names">
             <div class="input-div userName">
@@ -86,7 +86,7 @@
               />
             </div>
           </div>
-          <button class="button">Register</button>
+          <button class="button">Update</button>
         </form>
       </div>
     </div>
