--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Pages/Login/loginStyle.css" />
     <!-- Needed libraries -->
     <script type="module" src="./Pages/Login/script.js"></script>
-    <title>Document</title>
+    <title>RentEase: Login</title>
   </head>
   <body class="container">
     <div class="login-container">
