Finished settings page

--- a/settings.html
+++ b/settings.html
@@ -19,7 +19,7 @@
 
       <!-- Right Login Form Section -->
       <div class="form-section">
-        <h2 class="title">Update info</h2>
+        <h2 class="title">Settings</h2>
         <form class="form" id="register-form">
           <div class="names">
             <div class="input-div userName">
@@ -47,7 +47,7 @@
               <input
                 type="date"
                 class="input"
-                placeholder="Enter your date of birth"
+                placeholder="mm/dd/yy"
                 id="birthdate"
                 name="birthdate"
                 value=""
@@ -62,6 +62,7 @@
               placeholder="Enter your email"
               id="email"
               name="email"
+              disabled
             />
           </div>
           <div class="input-div passwords">
