--- a/settings.html
+++ b/settings.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Pages/Register/registerStyle.css" />
     <!-- Needed libraries -->
     <script type="module" src="./Pages/Settings/script.js"></script>
-    <title>RentEase: Register</title>
+    <title>RentEase: Settings</title>
   </head>
   <body class="container">
     <div class="register-container">
@@ -19,7 +19,7 @@
 
       <!-- Right Login Form Section -->
       <div class="form-section">
-        <h2 class="title">Settings</h2>
+        <h2 class="title">Update info</h2>
         <form class="form" id="register-form">
           <div class="names">
             <div class="input-div userName">
