Added sort by filter in search

--- a/favourites.html
+++ b/favourites.html
@@ -35,6 +35,13 @@
             />
           </div>
         </div>
+        <div class="sort-by-price">
+          <select id="sortPrice" name="sortPrice">
+            <option value="" selected disabled>Sort by:</option>
+            <option value="asc">Price: Low to High</option>
+            <option value="desc">Price: High to Low</option>
+          </select>
+        </div>
         <div class="search-button">
           <input type="submit" value="Filter" />
         </div>
