--- a/login.html
+++ b/login.html
@@ -20,33 +20,31 @@
       <!-- Right Login Form Section -->
       <div class="form-section">
         <h2 class="title">Login</h2>
-        <div class="form">
-          <form class="form" id="login-form">
-            <div class="input-div email">
-              <label class="label">Email</label>
-              <input
-                type="email"
-                class="input"
-                placeholder="Enter your email"
-                name="email"
-              />
-            </div>
-            <div class="input-div password">
-              <label class="label">Password</label>
-              <input
-                type="password"
-                class="input"
-                placeholder="Enter your password"
-                name="password"
-              />
-            </div>
-            <button class="button">Login</button>
-          </form>
-        </div>
+        <form class="form" id="login-form">
+          <div class="input-div email">
+            <label class="label">Email</label>
+            <input
+              type="email"
+              class="input"
+              placeholder="Enter your email"
+              name="email"
+            />
+          </div>
+          <div class="input-div password">
+            <label class="label">Password</label>
+            <input
+              type="password"
+              class="input"
+              placeholder="Enter your password"
+              name="password"
+            />
+          </div>
+          <button class="button">Login</button>
+        </form>
 
         <p class="text">
           Don't have an account?
-          <a href="../Register/register.html" class="link">Sign up</a>
+          <a href="./register.html" class="link">Sign up</a>
         </p>
       </div>
     </div>
